# Sysray

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  runtime-validation.yml
config/: pulsar.toml.example
deploy/launchd/: dev.kvdb.pulsar.plist
deploy/systemd/: pulsar.service
deploy/windows/: pulsar-task.xml
docs/: backlog.md  benchmarking.md  community-cheatsheet.md  cross-os-cheatsheet.md  cross-platform-validation.md  enterprise-cheatsheet.md  execution-roadmap.md  github-milestones-and-issues.md  help.md  metrics-checklist.md  metrics-matrix.md  optimization-review.md  product-scope.md  reference-architecture.md  release-process.md
scripts/: benchmark-overhead-linux.sh  build-complete.sh  capture-tui-screens.sh  install-linux-user.sh  pulsar-archive-raw.sh  pulsar-daily-snapshot.sh  pulsar-prune-raw.sh  redeploy-dev-user-service.sh  validate-install-flow.ps1  validate-install-flow.sh  validate-linux-metrics.sh  validate-service-flow.ps1  validate-service-flow.sh
src/: cli.rs  config.rs  install.rs  inventory.rs  log_sources.rs  main.rs  recording.rs  reference.rs  service.rs
src/api/: mod.rs  server.rs
src/collectors/: cpu.rs  disk.rs  linux.rs  logs.rs  memory.rs  mod.rs  network.rs  process.rs  system.rs
src/engine/: mod.rs  registry.rs  scheduler.rs
src/exporters/: csv.rs  json.rs  mod.rs  prometheus.rs
src/pipeline/: alerts.rs  cpu_trend.rs  mem_pressure.rs  mod.rs
src/platform/: api.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/tui/: dashboard.rs  mod.rs  theme.rs
src/tui/widgets/: alerts_widget.rs  analysis_widget.rs  cpu_widget.rs  disk_widget.rs  linux_widget.rs  log_widget.rs  memory_widget.rs  mod.rs  network_widget.rs  process_widget.rs  reference_widget.rs
